--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -9,6 +9,7 @@
       "pinecone-bar": "Pinecone Bar",
       "cocktails": "Pinecone Cocktails",
       "wines": "Pinecone Wines",
+      "contact-us": "Contact us",
       "default": "Pinecone"
     }
   },
@@ -173,6 +174,9 @@
     },
     "private-event": {
       "title": "Private event"
+    },
+    "contact-us": {
+      "title": "Contact us"
     }
   },
 
