поправил мета теги

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,11 +1,11 @@
 {
   "seo": {
     "home": {
-      "title": "Lucidity Triptych – Immersive Theater in Belgrade | Pinecone Theatre",
+      "title": "Lucidity Triptych – Immersive Theater in Belgrade - Pinecone Theatre",
       "description": "Experience Lucidity Triptych, an immersive and groundbreaking theatrical event in the Pinecone Theatre, Belgrade. Inspired by Nietzsche and Jung, this multi-sensory performance blends drama, music, and storytelling in an intimate setting, inviting the audience to explore dreams, conflicts, and transformation.",
       "keywords": "Lucidity Triptych, immersive theater, Pinecone Theatre, Belgrade theater, cultural events, Friedrich Nietzsche, Carl Jung, archetypes, drama, musical theater, multi-sensory performance, Belgrade art scene, innovative theater experience, dreamlike narrative, Belgrade culture",
       "openGraph": {
-        "title": "Lucidity Triptych – Immersive Theater in Belgrade | Pinecone Theatre",
+        "title": "Lucidity Triptych – Immersive Theater in Belgrade - Pinecone Theatre",
         "description": "Don't miss Lucidity Triptych at Pinecone Theatre, Belgrade's most innovative immersive theater event, blending drama, music, and storytelling. Limited tickets available!",
       }
     },
@@ -19,20 +19,20 @@
       }
     },
     "immersivity": {
-      "title": "Immersivity – Step Inside the Story | Pinecone Theatre",
+      "title": "Immersivity – Step Inside the Story - Pinecone Theatre",
       "description": "Discover the transformative world of immersive theater at Pinecone Theatre. Engage with vivid scenes, interact with characters, and become a co-creator of a story that captivates all your senses. Immersivity turns spectators into participants, offering a unique and unforgettable experience.",
       "keywords": "immersive theater, Pinecone Theatre, interactive storytelling, audience participation, sensory experience, immersive space, dynamic performance, emotional connection, unique theater experience, transformative storytelling, uncharted perspectives",
       "openGraph": {
-        "title": "Immersivity – Step Inside the Story | Pinecone Theatre",
+        "title": "Immersivity – Step Inside the Story - Pinecone Theatre",
         "description": "Experience immersive theater at Pinecone Theatre, where the line between audience and performer disappears. Step into a world of dynamic storytelling and sensory exploration."
       }
     },
     "team-cast": {
-      "title": "Team & Cast – Meet the Creative Minds | Pinecone Theatre",
+      "title": "Team & Cast – Meet the Creative Minds - Pinecone Theatre",
       "description": "Get to know the incredible team and cast behind Pinecone Theatre's immersive performances. Our talented actors, directors, and creative minds work together to craft unforgettable theater experiences that captivate and inspire.",
       "keywords": "Pinecone Theatre team, Pinecone Theatre cast, immersive theater cast, creative minds, theater directors, talented actors, Pinecone performers, innovative theater team, cast introduction, theatrical creativity, immersive performance creators",
       "openGraph": {
-        "title": "Team & Cast – Meet the Creative Minds | Pinecone Theatre",
+        "title": "Team & Cast – Meet the Creative Minds - Pinecone Theatre",
         "description": "Meet the team and cast of Pinecone Theatre. Behind every immersive performance, there’s a talented group of creators bringing stories to life."
       }
     },
