--- a/i18n/locales/sr.json
+++ b/i18n/locales/sr.json
@@ -1,11 +1,11 @@
 {
   "seo": {
     "home": {
-      "title": "Lucidity Triptych – Imerzivni Teatar u Beogradu | Pinecone Theatre",
+      "title": "Lucidity Triptych – Imerzivni Teatar u Beogradu - Pinecone Theatre",
       "description": "Doživite Lucidity Triptych, imerzivni i revolucionarni pozorišni događaj u Pinecone Theatre-u u Beogradu. Inspirisan Ničeom i Jungom, ovaj višesenzorni performans kombinuje dramu, muziku i pripovedanje u intimnom okruženju, pozivajući publiku da istraži snove, konflikte i transformaciju.",
       "keywords": "Lucidity Triptych, imerzivni teatar, Pinecone Theatre, pozorište u Beogradu, kulturni događaji, Fridrih Niče, Karl Jung, arhetipovi, drama, muzički teatar, višesenzorni performans, umetnička scena Beograda, inovativno pozorište, sanjiva naracija, kultura Beograda",
       "openGraph": {
-        "title": "Lucidity Triptych – Imerzivni Teatar u Beogradu | Pinecone Theatre",
+        "title": "Lucidity Triptych – Imerzivni Teatar u Beogradu - Pinecone Theatre",
         "description": "Ne propustite Lucidity Triptych u Pinecone Theatre-u, najinovativniji imerzivni događaj u Beogradu koji kombinuje dramu, muziku i pripovedanje. Broj karata je ograničen!"
       }
     },
@@ -19,20 +19,20 @@
       }
     },
     "immersivity": {
-      "title": "Imerzivnost – Zakoračite u Priču | Pinecone Theatre",
+      "title": "Imerzivnost – Zakoračite u Priču - Pinecone Theatre",
       "description": "Otkrijte transformativni svet imerzivnog teatra u Pinecone Theatre-u. Uključite se u žive scene, interagujte s likovima i postanite saučesnik u priči koja osvaja sva vaša čula. Imerzivnost pretvara posmatrače u učesnike, nudeći jedinstveno i nezaboravno iskustvo.",
       "keywords": "imerzivni teatar, Pinecone Theatre, interaktivno pripovedanje, učešće publike, senzorno iskustvo, imerzivni prostor, dinamične predstave, emocionalna povezanost, jedinstveno pozorišno iskustvo, transformativno pripovedanje, neistražene perspektive",
       "openGraph": {
-        "title": "Imerzivnost – Zakoračite u Priču | Pinecone Theatre",
+        "title": "Imerzivnost – Zakoračite u Priču - Pinecone Theatre",
         "description": "Doživite imerzivni teatar u Pinecone Theatre-u, gde granica između publike i izvođača nestaje. Zakoračite u svet dinamičnog pripovedanja i senzorne eksploracije."
       }
     },
     "team-cast": {
-      "title": "Tim i Glumačka Postava – Upoznajte Kreativce | Pinecone Theatre",
+      "title": "Tim i Glumačka Postava – Upoznajte Kreativce - Pinecone Theatre",
       "description": "Upoznajte neverovatan tim i glumačku postavu iza imerzivnih predstava Pinecone Theatre-a. Naši talentovani glumci, režiseri i kreativni umovi zajedno stvaraju nezaboravna pozorišna iskustva koja inspirišu i očaravaju.",
       "keywords": "tim Pinecone Theatre-a, glumačka postava Pinecone Theatre-a, postava imerzivnog teatra, kreativni umovi, režiseri, talentovani glumci, Pinecone izvođači, inovativni pozorišni tim, predstavljanje postave, kreativnost u pozorištu, tvorci imerzivnih predstava",
       "openGraph": {
-        "title": "Tim i Glumačka Postava – Upoznajte Kreativce | Pinecone Theatre",
+        "title": "Tim i Glumačka Postava – Upoznajte Kreativce - Pinecone Theatre",
         "description": "Upoznajte tim i glumačku postavu Pinecone Theatre-a. Iza svakog imerzivnog performansa stoji talentovana grupa tvoraca koji priče oživljavaju."
       }
     },
