--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -328,5 +328,33 @@
       "name": "Aleksandar Prudijan",
       "role": "Project creator/Writer"
     }
+  },
+  "contact_form": {
+    "first_name": {
+      "label": "First Name",
+      "placeholder": "First name",
+      "error": "This field is required"
+    },
+    "last_name": {
+      "label": "Last Name",
+      "placeholder": "Last name",
+      "error": "This field is required"
+    },
+    "email": {
+      "label": "Email Address",
+      "placeholder": "Add email",
+      "error": "This field is required"
+    },
+    "subject": {
+      "label": "Subject",
+      "placeholder": "How can we help you?",
+      "error": "This field is required"
+    },
+    "comments": {
+      "label": "Comments / Questions",
+      "placeholder": "Comments",
+      "error": "This field is required"
+    },
+    "submit": "Send Message"
   }
 }
