обновил зависимости, пофиксил ошибки

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -6,7 +6,7 @@
       "keywords": "Lucidity Triptych, immersive theater, Pinecone Theatre, Belgrade theater, cultural events, Friedrich Nietzsche, Carl Jung, archetypes, drama, musical theater, multi-sensory performance, Belgrade art scene, innovative theater experience, dreamlike narrative, Belgrade culture",
       "openGraph": {
         "title": "Lucidity Triptych – Immersive Theater in Belgrade - Pinecone Theatre",
-        "description": "Don't miss Lucidity Triptych at Pinecone Theatre, Belgrade's most innovative immersive theater event, blending drama, music, and storytelling. Limited tickets available!",
+        "description": "Don't miss Lucidity Triptych at Pinecone Theatre, Belgrade's most innovative immersive theater event, blending drama, music, and storytelling. Limited tickets available!"
       }
     },
     "about-us": {
